[tool.poetry]
name = "metis-app"
version = "0.4.17"
description = ""
authors = ["Col Perks <wild.fauve@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
metis-fn = "^0.1.1"
requests = "^2.31.0"
backoff = "^2.2.1"
simple-memory-cache = "^1.0.0"
pino = "^0.6.0"
metis-crypto = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
pytest = "^8.1.0"
pytest-env = "^1.1.3"
requests-mock = "^1.11.0"
time-machine = "^2.14.0"
pytest-mock = "^3.12.0"
moto = {extras = ["ssm"], version = "^5.0.3"}
boto3 = "^1.34.65"
aws-lambda-powertools = "^2.38.1"
aws-xray-sdk = "^2.14.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
python_classes = ["*Test", "Test*", "Describe*"]
python_functions = ["test_*", "it_*"]
xfail_strict = true
log_cli = true
log_cli_level = 20
env = []
testpaths = ["tests", "integration"]

[tool.pytest_env]
HOME = "~/tmp"
ENVIRONMENT = "test"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
